--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "dev": "nodemon",
     "dev-build": "ts-node src/server.ts",
+    "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -17,6 +18,9 @@
   "devDependencies": {
     "@tsconfig/node17": "^1.0.0",
     "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
