Added script to launch a mongodb server

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "db": "scripts/db.sh",
     "dev": "nodemon",
     "dev-build": "ts-node src/server.ts",
     "lint": "eslint . --ext .ts",
