--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "alwaysStrict": true,
     "noImplicitReturns": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".cache"]
 }
