--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon",
     "dev-build": "ts-node src/server.ts",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -19,10 +19,14 @@
   "devDependencies": {
     "@tsconfig/node17": "^1.0.0",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
     "@typescript-eslint/parser": "^5.26.0",
     "eslint": "^8.16.0",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.16",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.3",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
